--- a/src/app/themes/gds-theme.css
+++ b/src/app/themes/gds-theme.css
@@ -83,6 +83,7 @@
   --site-legal-bkg: #01467C;
   --site-legal-text: #ffffff;
   --site-heading-text: #01579B;
+  --site-featured-heading-text: #ffffff;
   --site-subnavbar-bkg: #013D6D;
   --site-nav-hover-bkg: #013D6D;
   
